# xraytsubaki

./: .gitignore  BENCHMARK_100K_SPECTRA.md  BUILD-PYTHON.md  BUILD_PYXRAYTSUBAKI.sh  CLAUDE.md  COPYRIGHT.md  Cargo.toml  ERROR_HANDLING_MIGRATION.md  FIXED_BUILD_SCRIPT.sh  LICENSE-APACHE  LICENSE-MIT  NALGEBRA_MIGRATION.md  OPTIMIZATION_COMPARISON.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SOLUTION.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_SUMMARY.md  PIP_TO_UV_MIGRATION.md  PLOTTING.md  PYTHON-BINDING-FIX.md  PYTHON_BINDINGS_FIXES.md  PYTHON_BINDINGS_ISSUES.md  README.md  README_PYXRAYTSUBAKI.md  XFTF_PERFORMANCE.md  analyze_optimization.md  benchmark_100k_parallel_results.txt  benchmark_100k_performance_branch.txt  benchmark_100k_results.txt  benchmark_output.txt  hello.py  import_test.py  package-lock.json  package.json  py_extension_example.py  pyproject.toml  setup.py  simple_test.py  test_extension.py  win.txt
benches/: profiling.md  xas_group_benchmark_parallel.rs  xas_group_benchmark_single.rs
crates/xasio/: Cargo.toml
crates/xraytsubaki/: .gitignore  Cargo.toml  pythontest.py  win.txt
crates/xraytsubaki/benches/: autobk_jacobian_bench.rs  xas_group_benchmark_100k.rs  xas_group_benchmark_100k_temp.rs  xas_group_benchmark_single.rs  xftf_bench.rs
crates/xraytsubaki/doc/: profiling.md
crates/xraytsubaki/src/: lib.rs  main.rs  prelude.rs
crates/xraytsubaki/src/plot/: builders.rs  exafs.rs  fitting.rs  mod.rs  tests.rs  traits.rs  utils.rs  xanes.rs
crates/xraytsubaki/src/xafs/: background.rs  bessel_i0.rs  errors.rs  fitting.rs  lmutils.rs  mathutils.rs  mod.rs  multispectrum.rs  normalization.rs  nshare.rs  tests.rs  xafsutils.rs  xasgroup.rs  xasparameters.rs  xasspectrum.rs  xrayfft.rs
crates/xraytsubaki/src/xafs/io/: mod.rs  xafs_bson.rs  xafs_json.rs  xasdatatype.rs
crates/xraytsubaki/supportinginfo/: uncertainty.md
crates/xraytsubaki/tests/pythonscript/: generate_multispectrum_fit_test.py  generate_xas_fitting_simple.py  generate_xas_fitting_test.py
crates/xraytsubaki/tests/testfiles/: Ru_QAS_preedge_larch.txt  Ru_QAS_smooth_larch.txt  Ru_QAS_xftf_larch.txt  athena.chir  test.bson  test.json  window_Gaussian.txt  window_Sine.txt  window_Welch.txt
examples/: plot_example.rs
openspec/: project.md
openspec/changes/migrate-to-nalgebra/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-nalgebra/specs/xas-data-structures/: spec.md
openspec/changes/modernize-error-handling/: design.md  proposal.md  tasks.md
openspec/changes/modernize-error-handling/specs/core-error-types/: spec.md
openspec/changes/modernize-error-handling/specs/domain-errors/: spec.md
openspec/changes/modernize-error-handling/specs/error-propagation/: spec.md
openspec/changes/optimize-autobk-jacobian-performance/: BENCHMARKING.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  STATUS.md  design.md  proposal.md  tasks.md
openspec/changes/optimize-autobk-jacobian-performance/specs/xafs-performance/: spec.md
openspec/changes/refactor-ndarray-to-nalgebra-dvector/: design.md  proposal.md  tasks.md
openspec/changes/refactor-ndarray-to-nalgebra-dvector/specs/xas-core/: spec.md
py-xraytsubaki/: Cargo.toml  README.md  create_test_data.py  pyproject.toml  test_python_bindings.py  test_refactored_bindings.py
py-xraytsubaki/python/py_xraytsubaki/: __init__.py
py-xraytsubaki/src/: builders.rs  fitting.rs  functions.rs  lib.rs  multispectrum.rs  xasgroup.rs  xasspectrum.rs
py-xraytsubaki/tests/: __init__.py  create_test_data.py  test_fitting.py  test_multispectrum_fitting.py  test_python_bindings.py  test_xas_functions.py  test_xasspectrum.py
py-xraytsubaki/tests/test_xraytsubaki_api/: __init__.py  run_all_tests.py  test_fitting.py  test_multispectrum_fitting.py  test_xasgroup_class.py  test_xasspectrum_class.py  test_xraylarch_api.py
py_standalone/: Cargo.toml  pyproject.toml  test_module.py
py_standalone/src/: lib.rs
pyxraytsubaki/: Cargo.toml  INSTALL.md  README.md  TEST_PLAN.md  pyproject.toml  test_refactored_bindings.py
pyxraytsubaki/python/pyxraytsubaki/: __init__.py  tests.py
pyxraytsubaki/src/: builders.rs  fitting.rs  functions.rs  lib.rs  multispectrum.rs  utils.rs  xasgroup.rs  xasspectrum.rs
pyxraytsubaki/tests/: run_all_tests.py  test_import.py  test_xas_functions.py
scripts/: run_benchmarks.sh
src/: lib.rs  main.rs  prelude.rs  xafs copy.rs
src/xafs/: background.rs  bessel_i0.rs  lmutils.rs  mathutils.rs  mod.rs  normalization.rs  nshare.rs  tests.rs  xafs.rs  xafsutils.rs  xasgroup.rs  xasspectrum.rs  xrayfft.rs
src/xafs/io/: mod.rs  xafs_bson.rs
standalone-python/: Cargo.toml  pyproject.toml
standalone-python/src/: lib.rs
supportinginfo/: uncertainty2.md
tests/pythonscript/: generate_test.py  requirements.txt
tests/testfiles/: Ru_QAS_athena.prj  Ru_QAS_autobk_bkg_larch.txt  Ru_QAS_autobk_k_larch.txt  Ru_QAS_preedge_larch.txt  Ru_QAS_smooth.txt  test.bson  window_Hanning.txt  window_Kaiser-Bessel.txt
ts-xraytsubaki/: README.md  USAGE.md  jest.config.js  package.json  summary.txt  test_simple.js  tsconfig.json
ts-xraytsubaki/src/: fitting.ts  functions.ts  index.ts  multispectrum.ts  xasgroup.ts  xasspectrum.ts
ts-xraytsubaki/src/ffi/: bindings.ts  bindings_mock.ts  types.ts
ts-xraytsubaki/test/: fitting.test.ts  functions.test.ts  index.test.ts  mock_test.ts  multispectrum.test.ts  simple_test.ts  xasgroup.test.ts  xasspectrum.test.ts
xraydb-rs/: Cargo.toml
xraytsubaki-gui/: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  test.html
xraytsubaki-gui/back/: plotters_chart copy.back
xraytsubaki-gui/public/: tailwind.css
xraytsubaki-gui/src/: footer.rs  home.rs  main.rs  menu.rs  plotly_temp.rs  plotters_chart.rs  top_menu.rs  xas.rs
