[package]
name = "xraytsubaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
data_reader = "0.5.0"
easyfft = "0.4.0"
errorfunctions = "0.2.0"
fftconvolve = "0.1.1"
ndarray = { version = "0.15.6", features = ["approx", "serde"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
levenberg-marquardt = "0.13.1"
nalgebra = "0.32.3"
num-complex = { version = "0.4.3", features = ["serde"] }
polyfit-rs = "0.2.1"
rusty-fitpack = "0.1.1"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_arrow = { version = "0.8.0", features = ["arrow2-0-17", "arrow-46"] }


[dependencies.enterpolation]
version = "0.2.1"
default-features = false
# re-enable all wanted features
features = ["std", "linear"]

[dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph"] }

criterion = { version = "0.5.1", features = ["html_reports"] }

# [[bench]]
# name = "xas_group_benchmark_single"
# harness = false

[[bench]]
name = "xas_group_benchmark_parallel"
harness = false

[profile.bench]
debug = true
