
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
  "crates/*",
  "py-xraytsubaki",
  # "examples/*",
]
default-members = ["crates/*"]
# exclude = [
#   "examples/datasets",
# ]

[workspace.package]
name = "xraytsubaki"
version = "0.1.0"
edition = "2021"
authors = ["Ryuichi Shimogawa <ryuichi.shimogawa@stonybrook.edu"]
homepage = "https://github.com/Ameyanagi/xraytsubaki"
repository = "https://github.com/Ameyanagi/xraytsubaki"
license = "MIT"

[workspace.dependencies]
# easyfft = { git = "https://github.com/Ameyanagi/easyfft", features = [
#   "serde",
# ] } # easyfft = { version = "0.4.1", feautures = ["serde"] }
easyfft = { version = "0.4.1", features = ["serde"] }
semver = { version = "1.0.21" }
approx = "0.5.1"
data_reader = "0.5.0"
errorfunctions = "0.2.0"
fftconvolve = "0.1.1"
ndarray = { version = "0.15.6", features = ["approx", "serde"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
levenberg-marquardt = "0.13.1"
nalgebra = "0.32.3"
num-complex = { version = "0.4.5", features = ["serde"] }
polyfit-rs = "0.2.1"
rusty-fitpack = "0.1.1"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_arrow = { version = "0.9.1", features = ["arrow2-0-17", "arrow-46"] }
bson = "2.9.0"
version = "3.0.0"
derivative = "2.2.0"

xraytsubaki = { version = "0.1.0", path = "crates/xraytsubaki" }

[workspace.dependencies.enterpolation]
version = "0.2.1"
default-features = false
# re-enable all wanted features
features = ["std", "linear"]
