[package]
name = "py-xraytsubaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xraytsubaki"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.20.0"
pyo3 = "0.20.2"
ndarray = { workspace = true }
xraytsubaki = { workspace = true }
