[package]
name = "py-xraytsubaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_xraytsubaki"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.20.0"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
ndarray = { workspace = true }
xraytsubaki = { workspace = true }
