[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyxraytsubaki"
version = "0.1.0"
description = "Python bindings for XRayTsubaki, a Rust library for X-ray Absorption Spectroscopy analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
  {name = "Ryuichi Shimogawa", email = "ryuichi.shimogawa@stonybrook.edu"}
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

[tool.maturin]
python-source = "python"
module-name = "pyxraytsubaki"
features = ["pyo3/extension-module"]