[package]
name = "xraytsubaki-gui"
version = "0.1.0"
authors = ["Ameyanagi <77273474+Ameyanagi@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


dioxus = { version = "0.4" }

dioxus-router = { version = "0.4", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

plotters = "0.3.5"
console_error_panic_hook = "0.1.7"
dioxus-free-icons = "0.7.0"
dioxus-charts = "0.1.3"
plotly = { version = "0.8.4", features = ["wasm"] }
plotters-svg = "0.3.5"
base64 = "0.21.5"
image = "0.24.7"
plotters-canvas = "0.3.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = { version = "0.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = { version = "0.4" }


[target.'cfg(target_arch = "wasm32")'.profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# [package.metadata.bundle]
# name = "XrayTsubaki"
# identifier = "com.github.ameyanagi.xraytsubaki"
# version = "0.1.0"
# resources = ["assets", "public"]
# copyright = "Copyright (c) Ameyanagi 2023"
